# busydev

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  commitlint.config.cjs  package-lock.json  package.json  turbo.json  vite.config.ts
.claude/: settings.shared.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-tag.yml  ci.yml  commitlint.yml  release.yml  site-bluehost.yml  site-ftp-deploy.yml  site-pages.yml
_archive/: CLAUDE.md  eslint.config.js
_archive/scripts/: versioning.mjs
_archive/src/: App.css
_archive/src-tauri/: Cargo.toml  package.json
docs/: demo-recording-guide.md  test-plan-todo-player.md
scripts/: record-demo.sh
site/: README.md  index.html  styles.css
site/docs/: core-workflows.html  core-workflows.md  getting-started.html  getting-started.md  index.html  index.md  setup.html  setup.md
src/: App.css  App.tsx  globals.d.ts  invoke.ts  settingsInvoke.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: codex.rs  git.rs  lib.rs  security.rs  settings.rs  state.rs  terminal.rs  tray.rs
src-tauri/src/agents/: claude.rs  codex.rs  manager.rs  mod.rs
src-tauri/src/commands/: agent.rs  git.rs  mcp_server.rs  mod.rs  project.rs  settings.rs  terminal.rs  workspace.rs
src-tauri/src/db/: mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/notifications/: mod.rs
src-tauri/src/terminal/: mod.rs
src/components/: AgentIcon.tsx  AgentVisualizer.css  AgentVisualizer.tsx  AnalyticsView.css  AnalyticsView.tsx  GlobalSessionViewer.css  GlobalSessionViewer.tsx  NotificationToasts.css  NotificationToasts.tsx  ProjectNavigator.css  ProjectNavigator.tsx  ResizeHandle.css  ResizeHandle.tsx  SessionPanel.css  SessionPanel.tsx  SessionWizard.css  SessionWizard.tsx  TabBar.css  (+9 more)
(+215 files in other folders)
