[package]
name = "busydev"
version = "0.1.19"
edition = "2021"

[lib]
name = "busydev_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time"] }
libc = "0.2"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
